Fix build and create-cluster targets

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -8,7 +8,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: manager
+  name: controller
   namespace: projectsveltos
   labels:
     control-plane: shard-controller
