--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -223,7 +223,7 @@ spec:
         - --v=5
         command:
         - /manager
-        image: projectsveltos/shard-controller-amd64:dev
+        image: projectsveltos/shard-controller-amd64:v0.19.0
         livenessProbe:
           httpGet:
             path: /healthz
