--- a/pkg/sharding/em.yaml
+++ b/pkg/sharding/em.yaml
@@ -25,7 +25,7 @@ spec:
         - --v=5
         command:
         - /manager
-        image: projectsveltos/event-manager-amd64:main
+        image: projectsveltos/event-manager-amd64:v0.20.0
         livenessProbe:
           httpGet:
             path: /healthz
