--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -224,7 +224,7 @@ spec:
         - --report-mode=0
         command:
         - /manager
-        image: projectsveltos/shard-controller-amd64:dev
+        image: projectsveltos/shard-controller-amd64:v0.21.0
         livenessProbe:
           httpGet:
             path: /healthz
