--- a/pkg/sharding/ac.yaml
+++ b/pkg/sharding/ac.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/default-container: manager
+        kubectl.kubernetes.io/default-container: controller
       labels:
         control-plane: addon-controller
     spec:
@@ -26,7 +26,7 @@ spec:
         - --v=5
         command:
         - /manager
-        image: projectsveltos/addon-controller-amd64:dev
+        image: projectsveltos/addon-controller-amd64:v0.21.0
         livenessProbe:
           httpGet:
             path: /healthz
