--- a/pkg/sharding/classifier.yaml
+++ b/pkg/sharding/classifier.yaml
@@ -24,9 +24,10 @@ spec:
         - --report-mode=0
         - --shard-key={{.SHARD}}
         - --v=5
+        - --version=mainmain
         command:
         - /manager
-        image: projectsveltos/classifier-amd64:main
+        image: projectsveltos/classifier-amd64:dev
         livenessProbe:
           httpGet:
             path: /healthz
