Prepare dev to main merge
Post release v0.23.0

--- a/pkg/sharding/em.yaml
+++ b/pkg/sharding/em.yaml
@@ -25,7 +25,7 @@ spec:
         - --v=5
         command:
         - /manager
-        image: projectsveltos/event-manager-amd64:v0.23.0
+        image: projectsveltos/event-manager-amd64:main
         livenessProbe:
           httpGet:
             path: /healthz
