--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -151,7 +151,7 @@ spec:
         - --report-mode=0
         command:
         - /manager
-        image: projectsveltos/shard-controller-amd64:v0.26.0
+        image: projectsveltos/shard-controller-amd64:main
         livenessProbe:
           failureThreshold: 3
           httpGet:
