--- a/pkg/sharding/em.yaml
+++ b/pkg/sharding/em.yaml
@@ -24,7 +24,7 @@ spec:
         - --v=5
         command:
         - /manager
-        image: projectsveltos/event-manager:v0.27.0
+        image: projectsveltos/event-manager-amd64:main
         livenessProbe:
           failureThreshold: 3
           httpGet:
