--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -151,7 +151,7 @@ spec:
         - --report-mode=0
         command:
         - /manager
-        image: projectsveltos/shard-controller:main
+        image: projectsveltos/shard-controller:dev
         livenessProbe:
           failureThreshold: 3
           httpGet:
