--- a/pkg/sharding/em.yaml
+++ b/pkg/sharding/em.yaml
@@ -22,10 +22,10 @@ spec:
         - --diagnostics-address=:8443
         - --shard-key={{.SHARD}}
         - --v=5
-        - --version=v0.38.1
+        - --version=main
         command:
         - /manager
-        image: docker.io/projectsveltos/event-manager:v0.38.1
+        image: docker.io/projectsveltos/event-manager:main
         livenessProbe:
           failureThreshold: 3
           httpGet:
