--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -144,7 +144,7 @@ spec:
         - --report-mode=0
         command:
         - /manager
-        image: docker.io/projectsveltos/shard-controller:v0.48.0
+        image: docker.io/projectsveltos/shard-controller:main
         livenessProbe:
           failureThreshold: 3
           httpGet:
