--- a/config/default/manager_auth_proxy_patch.yaml
+++ b/config/default/manager_auth_proxy_patch.yaml
@@ -14,3 +14,4 @@ spec:
         - "--diagnostics-address=:8443"
         - "--v=5"
         - "--report-mode=0"
+        - "--agent-in-mgmt-cluster=false"
