--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -145,7 +145,7 @@ spec:
         - --agent-in-mgmt-cluster=false
         command:
         - /manager
-        image: docker.io/projectsveltos/shard-controller:main
+        image: docker.io/projectsveltos/shard-controller:v0.52.1
         livenessProbe:
           failureThreshold: 3
           httpGet:
